[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/WeaponWheel/Normal.png" type="Texture" id=1]
[ext_resource path="res://assets/WeaponWheel/selected.png" type="Texture" id=2]
[ext_resource path="res://assets/WeaponWheel/disabled.png" type="Texture" id=3]
[ext_resource path="res://scens/Weaponwheel/wheel.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 4 )

[node name="wheelcel0" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -133.0
margin_right = 50.0
margin_bottom = -63.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel1" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.0
margin_top = -127.0
margin_right = 164.0
margin_bottom = -57.0001
rect_rotation = 44.9999
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 143.0
margin_top = -44.0
margin_right = 241.0
margin_bottom = 26.0
rect_rotation = 89.9999
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 137.0
margin_top = 69.0
margin_right = 235.0
margin_bottom = 139.0
rect_rotation = 135.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel4" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 52.0
margin_top = 144.0
margin_right = 150.0
margin_bottom = 214.0
rect_rotation = -180.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel5" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 138.0
margin_right = 36.0
margin_bottom = 208.0
rect_rotation = -135.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel6" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = 54.0
margin_right = -40.0
margin_bottom = 124.0
rect_rotation = -89.9999
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="wheelcel7" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -58.0
margin_right = -34.0
margin_bottom = 12.0
rect_rotation = -44.9999
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[connection signal="pressed" from="wheelcel0" to="." method="_on_wheelcel0_pressed"]
[connection signal="pressed" from="wheelcel1" to="." method="_on_wheelcel1_pressed"]
[connection signal="pressed" from="wheelcel2" to="." method="_on_wheelcel2_pressed"]
[connection signal="pressed" from="wheelcel3" to="." method="_on_wheelcel3_pressed"]
[connection signal="pressed" from="wheelcel4" to="." method="_on_wheelcel4_pressed"]
[connection signal="pressed" from="wheelcel5" to="." method="_on_wheelcel5_pressed"]
[connection signal="pressed" from="wheelcel6" to="." method="_on_wheelcel6_pressed"]
[connection signal="pressed" from="wheelcel7" to="." method="_on_wheelcel7_pressed"]
